cambios: - agregar lupas a todas las tablas. - mejorar diseño de los tabs - agregar padding al tab pane - agregar los iconos a jugadores, campeones y partidas. - agregar el icono de filtros y borrar filtros a todas las tablas. - agregar los iconos de + a añadir partida. - Agregar icono del manual + F1